# py-sub-generator-sakura

./: .gitignore  APPLE_SILICON_CHANGELOG.md  APPLE_SILICON_GUIDE.md  ISSUE_RESOLUTION_SUMMARY.md  Makefile  OPTIMIZATION_SUMMARY.md  PROGRESS_SUMMARY.md  README.md  README.zh.md  SETUP_GUIDE.md  TECHNICAL_CHANGELOG.md  config.json  main.py  pyproject.toml  pytest.ini  run_tests.py  setup.py  setup_apple_silicon.py  test_hardware_acceleration.py
.github/: FUNDING.md  FUNDING.yml
docs/: CLEANUP_RESULTS.md  CLEANUP_SUMMARY.md  COMBINED_SUMMARY.md  COMPLETE_PROGRESS_SUMMARY.md  FINAL_OPTIMIZATION_SUMMARY.md  HARDWARE_ACCELERATION_GUIDE.md  MAKEFILE_IMPROVEMENTS.md  PROGRESS_SUMMARY.md  REFACTORING_ANALYSIS.md  SAKURA_GUIDE.md  SAKURA_UI_INTEGRATION.md  SOURCE_STRUCTURE.md  UV_GUIDE.md  UV_TOOL_STRATEGY.md
examples/: README.md  demo_sakura.py  demo_sakura_14b_test.py  demo_sakura_translation.py  demo_three_languages.py  demo_three_languages_quick.py  download_sakura_models.py  sakura_llm_example.py
prompts/: dramatic.txt  mature.txt  pornify.txt  standard.txt
src/: __init__.py
src/asr/: __init__.py  base_asr.py  whisper_asr.py
src/subtitle/: __init__.py  subtitle_generator.py  subtitle_processor.py
src/translation/: __init__.py  base_translator.py  huggingface_translator.py  pytorch_translator.py  sakura_translator.py  sakura_translator_llama_cpp.py  translation_pipeline.py
src/translation/interface/: __init__.py  base_translator.py  pytorch_translator.py
src/ui/: __init__.py  main_window.py
src/ui/components/: __init__.py  preview_dialog.py  progress_dialog.py  settings_dialog.py
src/utils/: __init__.py  audio_processor.py  chinese_converter.py  config.py  file_handler.py  hallucination_filter.py  logger.py  scene_detector.py  vad_processor.py
tests/: __init__.py  conftest.py  test_cache.py  test_gpu_detection.py  test_hardware_acceleration.py  test_performance.py  test_sakura.py  test_sakura_ui.py  test_translation.py  test_whisper_validation.py
tests/data/: README.md
tests/integration/: __init__.py  test_audio_pipeline_e2e.py  test_full_pipeline_demo.py  test_sakura_pipeline_integration.py  test_translation_pipeline_integration.py
tests/manual/: __init__.py  debug_asr.py  minimal_test.py  test_sakura_config_debug.py  validate_kobo_asr.py  validate_pipeline_with_wav.py
tests/regression/: __init__.py  test_no_segments_issue.py
tools/: setup_apple_silicon.py
